<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sersilinc.needmorecookies.AddItem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/add_item"
        android:text="@string/add_item_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/product"
        android:id="@+id/product"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add_item"
        android:inputType="textCapSentences"
        android:textAlignment="center" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/quantity"
        android:id="@+id/quantity"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/product"
        android:layout_marginTop="50dp"
        android:inputType="numberDecimal"
        android:textAlignment="center" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/price"
        android:id="@+id/price"
        android:layout_below="@+id/quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_category"
        android:id="@+id/category"
        android:layout_below="@+id/price"
        android:layout_marginTop="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/category"
        android:layout_marginTop="10dp" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_item"
        android:layout_below="@+id/type"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/price"
        android:layout_toEndOf="@+id/price"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:src="@drawable/ic_done_black_24dp"
        android:visibility="gone"/>
</RelativeLayout>
